Done with the Template , continue with the  functionality tomorrow

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>Comment</title>
 </head>
 <body>
@@ -66,8 +67,9 @@
 
             </div>
 
-            <div class="triple-dot">
+            <div class="triple-dot" id="dot">
                 <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                <div class="report-tooltip">Report</div>
             </div>
 
         </div>
@@ -106,8 +108,9 @@
 
             </div>
 
-            <div class="triple-dot">
+            <div class="triple-dot" id="dot">
                 <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                <div class="report-tooltip">Report</div>
             </div>
 
         </div>
@@ -146,8 +149,9 @@
 
             </div>
 
-            <div class="triple-dot">
+            <div class="triple-dot" id="dot">
                 <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                <div class="report-tooltip"><a href="#" target="_blank">Report</a></div>
             </div>
 
         </div>
